# ZSearch

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
src/zsearch/: CMakeLists.txt
src/zsearch/include/: zsearch.h
src/zsearch/src/: zsearch.cpp
test/: CMakeLists.txt  main.cpp  zsearch_test.cpp
test/asserts/: 202101051107-alimentación-sana-y-saludable.md  202101051149-Estilos-para-remodelar-el-hogar.md  202101061817-archivo-prueba-num-i5.md  202101062013-otra-nota-mas-para-test-6.md
